welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:8: error: Boolean does not take parameters
  else ((a<10 || a>20)&&(b<10 || b>20)){
                                       ^